// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. key facts with title 1`] = `
<div>
  <div>
    EXAMPLE TITLE
  </div>
  <div>
    <div>
      <div />
      <div>
        Example bullet text
      </div>
    </div>
    <div>
      <div />
      <div>
        An example 
        <a
          href="https://example.io"
          role="link"
        >
          link
        </a>
      </div>
    </div>
    <div>
      <div />
      <div>
        More example text.
      </div>
    </div>
    <div>
      <div />
      <div>
        Example text 
        <span>
          this is bold 
        </span>
        <span>
          this is in italics.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. key facts without title 1`] = `
<div>
  <div>
    <div>
      <div />
      <div>
        Example bullet text
      </div>
    </div>
    <div>
      <div />
      <div>
        An example 
        <a
          href="https://example.io"
          role="link"
        >
          link
        </a>
      </div>
    </div>
    <div>
      <div />
      <div>
        More example text.
      </div>
    </div>
    <div>
      <div />
      <div>
        Example text 
        <span>
          this is bold 
        </span>
        <span>
          this is in italics.
        </span>
      </div>
    </div>
  </div>
</div>
`;
